# ROSE-Experiment

./: README.md  generate_dataset_from_records.py
Horus/: AES.cpp  AVLTree.cpp  AVLTree.h  CMakeLists.txt  Horus.cpp  Horus.h  OMAP.cpp  OMAP.h  ORAM.cpp  ORAM.hpp  PRFORAM.cpp  PRFORAM.hpp  RAMStore.cpp  RAMStore.hpp  Utilities.cpp  Utilities.h  main.cpp  sse_benchmark.cpp  sse_benchmark.h
IM-DSSE/: CMakeLists.txt  DSSE_Crypto.cpp  DSSE_Crypto.h  DSSE_Hashmap_Key_Class.cpp  DSSE_Hashmap_Key_Class.h  DSSE_KeyGen.cpp  DSSE_KeyGen.h  DSSE_Trapdoor.cpp  IM-DSSE-Client.cpp  IM-DSSE-Client.h  IM-DSSE-Server.cpp  IM-DSSE-Server.h  Krawczyk128_KDF.cpp  Krawczyk128_KDF.h  MasterKey.h  config.h  main.cpp  sse_benchmark.cpp  sse_benchmark.h  struct_thread_precompute_aeskey.h
ROSE/: CMakeLists.txt  KUPRF.cpp  KUPRF.h  common.cpp  common.h  main.cpp  rose_client.cpp  rose_client.h  rose_server.cpp  rose_server.h  sse_benchmark.cpp  sse_benchmark.h
fides/: CMakeLists.txt  fides.cpp  fides.h  main.cpp  sophos.cpp  sophos.h  sse_benchmark.cpp  sse_benchmark.h  trapdoor_permutation.cpp  trapdoor_permutation.h
